# dartvm_embed_lib

./: .dart_version  .gitignore  CMakeLists.txt  README.md  analysis_options.yaml  build.sh  build_dart_sdk.py  dart_sdk.patch  reload_sources.sh  run.sh
.github/workflows/: build-linux.yml  release.yml
cmake/: DartVmEmbedHelpers.cmake  dartvm_embed_libConfig.cmake.in
docs/: IMPLEMENTATION_ZH.md  MAIN_IMPL_CODE_ANNOTATED_ZH.md  MAIN_IMPL_VS_INITIALIZE_ZH.md  REFACTOR_PATH_APIS_ZH.md  RUNTIME_INCLUDE_LINE_BY_LINE_ZH.md
include/: dartvm_embed_lib.h
src/: CMakeLists.txt  dartvm_embed_lib.cpp
test/: CMakeLists.txt  test_embed_api_jit.cpp
tool/: reload_sources.dart
